--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -47,8 +47,8 @@
 				<div class="col">
 					
 					<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/" role="button"><font color="white"><i class="fab fa-facebook fa-2x"> <font color= #001a33>.</font></i></font></a>
-					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/" role="button"><font color="white"><i class="fab fa-twitter fa-2x"> <font color= #001a33>.</font></i></font></a>
-					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/" role="button"><font color="white"><i class="fab fa-instagram fa-2x"> </i></font></a>
+					<a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/" role="button"><font color="white"><i class="fab fa-twitter fa-2x"> <font color= #001a33>.</font></i></font></a>
+					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/" role="button"><font color="white"><i class="fab fa-instagram fa-2x"> </i></font></a>
 					<br><br><br>	
 					
 					<font color="white"><h4>Κεντρικά γραφεία:</h4></font>
