--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -174,8 +174,8 @@
 						</a>
 						
 						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">Πως επαναφορτίζω την κάρτα μου</a>
-						  <a class="dropdown-item" href="#">Πώς αναζητώ μια διαδρομή</a>
+						  <a class="dropdown-item" href="/pws_epanafortizw_karta">Πως επαναφορτίζω την κάρτα μου</a>
+						  <a class="dropdown-item" href="/pws_anazitw_diadromi">Πώς αναζητώ μια διαδρομή</a>
 						</div>
 					</li>
 				</ul>
