--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -174,8 +174,8 @@
 						</a>
 						
 						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="#">How do I recharge my card</a>
-						  <a class="dropdown-item" href="#">How do I search for a route</a>
+						  <a class="dropdown-item" href="/pws_epanafortizw_karta">How do I recharge my card</a>
+						  <a class="dropdown-item" href="/pws_anazitw_diadromi">How do I search for a route</a>
 						</div>
 					</li>
 				</ul>
