fixed spacing between navbar options

--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -101,7 +101,7 @@
 					  
 					<li class="nav-item dropdown">  
 						<li class="nav-item active">
-						<a class="nav-link" href="/"><font color="white"><i class="fa fa-home"></i> Home </font></a>
+						<a class="nav-link" href="/" style="padding-right: 15px;"><font color="white"><i class="fa fa-home"></i> Home </font></a>
 						</li>
 					</li>
 					
@@ -109,7 +109,7 @@
 					
 					<li class="nav-item dropdown">
 						
-						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding-right: 15px;">
 						  <font color="white">Routes </font>
 						</a>
 						
@@ -125,7 +125,7 @@
 					
 					
 					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding-right: 15px;">
 						  <font color="white">Tickets/Cards </font>
 						</a>
 						
@@ -140,7 +140,7 @@
 					  
 					  
 					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding-right: 15px;">
 						  <font color="white">People with disabilities </font>
 						</a>
 						
@@ -152,12 +152,12 @@
 					
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/anakoinoseis"><font color="white">News </font></a>
+						<a class="nav-link" href="/anakoinoseis" style="padding-right: 15px;"><font color="white">News </font></a>
 					</li>			
 					
 					
 					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding-right: 15px;">
 						  <font color="white">Contact </font>
 						</a>
 						
@@ -169,7 +169,7 @@
 					
 					
 					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="padding-right: 15px;">
 						  <font color="white">Help </font>
 						</a>
 						
