--- a/views/apotelesmata_anaz_diadromis.ejs
+++ b/views/apotelesmata_anaz_diadromis.ejs
@@ -14,12 +14,12 @@
 					<th scope="col">ΑΦΕΤΗΡΙΑ</th>
 					
 					<th scope="col">ΣΤΑΣΗ 1</th>
-					<th scope="col"> ... </th>
+					<th scope="col">ΟΛΕΣ ΟΙ ΣΤΑΣΕΙΣ</th>
 					<th scope="col">ΣΤΑΣΗ 10</th>
 					
 					<th scope="col">ΤΕΡΜΑ</th>
 					<th scope="col">ΕΠΟΜΕΝΟ ΣΕ</th>
-					<th scope="col">ΕΜΦΑΝΙΣΗ ΑΦΕΤΗΡΙΑΣ ΣΤΟ ΧΑΡΤΗ</th>
+					<th scope="col">ΧΑΡΤΗΣ ΑΦΕΤΗΡΙΑΣ</th>
 				</tr>
 			</thead>
 			
@@ -31,7 +31,7 @@
 						<td><%= drom.afetiria %></td>
 						
 						<td><%= drom.stasi1 %></td>
-						<td> ... </td>
+						<td><a target="_blank" rel="noopener noreferrer" href="/_staseis/<%= drom._id %>">Στάσεις</a></td>
 						<td><%= drom.stasi10 %></td>
 						
 						<td><%= drom.terma %></td>
