--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 	<div class="row">
 
 		<div class="col">
-		  <div class="card" style="width:300px; height:280px; background-color: #e6e6e6">
+		  <div class="card" style="width:px; height:280px; background-color: #e6e6e6">
 			  <div class="card-body">
 			  
 				<h4 style="text-align: center;" class="card-title"><b>Διαδρομή</b></h4>
@@ -37,7 +37,7 @@
 		
 		<div class="col">
 		  <div class="card" style="width:300px; height:280px; background-color: #e6e6e6">
-			<img class="card-img-top" height="160" width="100" src="https://www.athenstransport.com/wp-content/uploads/2017/11/%CE%95%CE%B9%CF%83%CE%B9%CF%84%CE%AE%CF%81%CE%B9%CE%BF-athena-ticket-638x381.jpg" alt="Card image cap">
+			<img class="card-img-top" height="190" width="100" src="https://www.athenstransport.com/wp-content/uploads/2017/11/%CE%95%CE%B9%CF%83%CE%B9%CF%84%CE%AE%CF%81%CE%B9%CE%BF-athena-ticket-638x381.jpg" alt="Card image cap">
 			<div class="card-body">
 			
 			 
