--- a/views/apotelesmata_anaz_diadromis.ejs
+++ b/views/apotelesmata_anaz_diadromis.ejs
@@ -42,7 +42,7 @@
 			</tbody>
 		</table>
 		
-		<a href="javascript:history.back()">Επιστροφή στην αναζήτηση δρομολογίου</a>
+		<a href="/anazitisi_diadromis">Επιστροφή στην αναζήτηση δρομολογίου</a>
 
 	</div>
 
