--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,22 @@
 <link rel="stylesheet" type="text/css" href="/login.css">
 
 
+
+
 <br>
 <div class="container">
+
+	<% if( count === 1){ %>
+	<div class="alert warning" id="alt">
+	  <span class="closebtn">&times;</span>  
+	  <font color="black"><strong>ΠΡΟΣΟΧΗ!</strong> Αυτός ο ιστοχώρος χρησιμοποιεί cookies.Συνεχίζοντας συμφωνείτε με την χρήση τους. <small><b><a target="_blank" rel="noopener noreferrer" href="https://automattic.com/cookies/">Cookie Policy</a></small></b></font>
+	  
+	</div>
+	<% } %>
+		
+			
+			
+			
 	<div class="row">
 
 		<div class="col">
@@ -206,6 +220,18 @@
 
 <br>
 
+<script>
+var close = document.getElementsByClassName("closebtn");
+var i;
+
+for (i = 0; i < close.length; i++) {
+  close[i].onclick = function(){
+    var div = this.parentElement;
+    div.style.opacity = "0";
+    setTimeout(function(){ div.style.display = "none"; }, 600);
+  }
+}
+</script>
 
 
 
