--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,33 @@
 				left: 87px;
 			}
 			
-		
+			#alt {
+			  padding: 20px;
+			  background-color: #f44336;
+			  color: white;
+			  opacity: 1;
+			  transition: opacity 0.6s;
+			  margin-bottom: 15px;
+			  background-color: #ff9800;
+			}
+
+			
+			.closebtn {
+			  margin-left: 15px;
+			  color: white;
+			  font-weight: bold;
+			  float: right;
+			  font-size: 22px;
+			  line-height: 20px;
+			  cursor: pointer;
+			  transition: 0.3s;
+			}
+
+			.closebtn:hover {
+			  color: black;
+			}
+
+
 		</style>
 	</head>
 
