--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -251,7 +251,7 @@
 					
 					<li class="nav-item dropleft active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					        <i class="fas fa-user-cog fa-md"> </i><font color=#1aff1a> <b><%= currentUser.username  %></b> </font>
+					        <i class="fas fa-user-cog fa-md"> </i><font color= #ff9933> <b><%= currentUser.username  %></b> </font>
 						</a>
 						
 						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
