--- a/views/dromologia_mou.ejs
+++ b/views/dromologia_mou.ejs
@@ -48,7 +48,7 @@
 		
 	<% }else{ %>
 		
-		<b><h3>Δεν Υπάρχουν Αποθηκευμένα Δρομολόγια. </h3></b>
+		<b><h3>Δεν υπάρχουν αποθηκευμένα δρομολόγια. </h3></b>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
 	<% } %>
