--- a/views/home.ejs
+++ b/views/home.ejs
@@ -98,7 +98,16 @@
 			</div>
 		</div>
 		  
-		  
+		<div class="col">
+		  <div class="card" style="background-color: #e6e6e6">
+			<img class="card-img-top" height="180" width="100" src="https://www.irishtimes.com/polopoly_fs/1.3745445.1546366877!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="Card image cap">
+			<div class="card-body">
+			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/times_eisitirion" class="btn btn-outline-primary" role="button"><b>Τιμές εισιτηρίων</b></a>   </h3>
+			</div>
+		  </div>
+		</div>
+		
+		
 		<div class="col">
 		  <div class="card" style="background-color: #e6e6e6">
 			<img class="card-img-top" height="180" width="100" src="https://s.kathimerini.gr/resources/2018-08/08s1metr-thumb-large.jpg" alt="Card image cap">
@@ -113,17 +122,7 @@
 		  <div class="card" style="background-color: #e6e6e6">
 			<img class="card-img-top" height="180" width="100" src="https://techsenior.eu/wp-content/uploads/2017/12/senior-couple-websurfing-on-internet-with-laptop-happy-elderly-man-and-woman-using-computer-1200x600.jpg" alt="Card image cap">
 			<div class="card-body">
-			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/error_page" class="btn btn-outline-primary" role="button"><b>Εύκολη λειτουργία</b></a>   </h3>
-			</div>
-		  </div>
-		</div>
-		  
-		  
-		<div class="col">
-		  <div class="card" style="background-color: #e6e6e6">
-			<img class="card-img-top" height="180" width="100" src="https://www.irishtimes.com/polopoly_fs/1.3745445.1546366877!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="Card image cap">
-			<div class="card-body">
-			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/times_eisitirion" class="btn btn-outline-primary" role="button"><b>Τιμές εισιτηρίων</b></a>   </h3>
+			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/error_page" class="btn btn-outline-primary" role="button"><b>Λειτουργία ΑμΕα</b></a>   </h3>
 			</div>
 		  </div>
 		</div>
