--- a/views/epiveveosi_pliromis.ejs
+++ b/views/epiveveosi_pliromis.ejs
@@ -34,7 +34,7 @@
 			
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		
-		<p> Θα γίνει αυτόματη επιστροφή στην αρχική σελίδα σε <b><span id="seconds"></span></b> δευτερόλπτα. </p>
+		<p> Θα γίνει αυτόματη επιστροφή στην αρχική σελίδα σε <b><span id="seconds"></span></b> δευτερόλεπτα. </p>
 		
 	</header>
 </div>
