--- a/views/pws_anazitw_diadromi.ejs
+++ b/views/pws_anazitw_diadromi.ejs
@@ -18,6 +18,7 @@
     <h4>4. Ολοκλήρωση αναζήτησης διαδρομής</h4>
 
     <br><br>
+	<a href="/anazitisi_diadromis">Αναζήτηση Διαδρομής</a>
 </div>
 
 
