--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -35,7 +35,7 @@
 				</div>
 				<div class="col">
 					<div align="center">
-						<font color="white"><h4 id="hh">ΑμΕα</h4></font>
+						<font color="white"><h4 id="hh">ΑμεΑ</h4></font>
 						<br><br><br>
 						
 						<a id="aa" class="btn" href="/staseis_amea" role="button"><font color="white">Στάσεις με προεξοχές</font></a> <br>
