--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -128,7 +128,7 @@
 						<div class="col">
 							<p> </p>
 							<br>
-							<a class="btn btn-primary active btn-sm" href="/error_page" role="button">Λειτουργία ΑμΕΑ</a>
+							<a class="btn btn-primary active btn-sm" href="/error_page" role="button">Λειτουργία ΑμεΑ</a>
 						</div>
 					
 						<div class="col">
