--- a/views/login.ejs
+++ b/views/login.ejs
@@ -91,14 +91,14 @@
 
 			<div class="form-group">
 				<label>Όνομα Χρήστη</label>
-				<input class="form-control" type="text" name="username" placeholder = "username">
+				<input class="form-control" type="text" name="username" placeholder = "Όνομα χρήστη">
 				<font color= "red"><div class="error" id="nameErr"></div></font>
 			</div>
 
 
 			<div class="form-group">
 				<label>Κωδικός</label>
-				<input class="form-control" type="password" name="password" placeholder = "password">
+				<input class="form-control" type="password" name="password" placeholder = "Κωδικός">
 				<font color= "red"><div class="error" id="passErr"></div></font>
 			</div>
 
