--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,7 +16,45 @@
 						<a id="aa" class="btn" href="/dromologia_aerodromiou" role="button"><font color="white">Δρομολόγια προς αεροδρόμιο</font></a>	<br>
 						<a id="aa" class="btn" href="/oles_oi_grammes" role="button"><font color="white">Όλες οι γραμμές</font></a>	
 						
+						<br>
+						<br>
+					
+						<div id="contact"> <font color="white"><i class="far fa-envelope-open fa-2x"></i></font> </div>
 						
+						<div id="contactForm">
+							
+							    <b><font color="black"> <h4>Επικοινωνία με email</h4></font></b>
+								<br>
+								
+							<form action="/">
+								<div style="width: 95%;">
+								
+								
+									<div class="form-group">
+										<input type="text" class="form-control" name = "a" placeholder="Όνομα" required>
+									</div>
+								  
+								  
+									<div class="form-group">
+										<input type="email" class="form-control" name = "b"  placeholder="Email" required>
+									</div>
+								
+									<div class="form-group">
+								    <textarea name = "sxolia" rows="3" cols="31">
+									</textarea>
+									</div>
+								
+								
+								  <br>
+								  <button type="submit" class="btn btn-warning btn-sm active" style="float: center;">Αποστολή</button>
+								</div>
+							</form>
+								
+							  
+							
+						</div>
+					
+					
 					
 				</div>
 				<div class="col">
@@ -65,6 +103,7 @@
 				
 			</div>
 			<br><br>
+			
 			
 		
 			<div align="center">
