--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -73,15 +73,17 @@
 			}
 			
 			#contactForm { 
+			  border-width: 4px;
+			  border-color: #cc7a00;
 			  opacity: 1;
 			  display: none;
-			  padding: 2em;
+			  padding: 3em;
 			  width: 310px;
 			  text-align: center;
 			  background: #e6e6e6;
 			  border-radius: 8px;
 			  position: fixed;
-			  top:30%;
+			  top:18%;
 			  left:5%;
 			}
 			
