--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,12 +21,12 @@
 					
 						<div id="contact"> <font color="white"><i class="far fa-envelope-open fa-2x"></i></font> </div>
 						
-						<div id="contactForm">
+						<div class="card" id="contactForm">
 							
 							    <b><font color="black"> <h4>Επικοινωνία με email</h4></font></b>
 								<br>
 								
-							<form action="/">
+							<form action="/email_me" POST="GET">
 								<div style="width: 95%;">
 								
 								
@@ -40,8 +40,11 @@
 									</div>
 								
 									<div class="form-group">
-								    <textarea name = "sxolia" rows="3" cols="31">
-									</textarea>
+										<input type="text" class="form-control" name = "c"  placeholder="Τίτλος θέματος" required>
+									</div>
+									
+								    <div class="md-form">
+									  <textarea id="form7" class="md-textarea form-control" rows="3" placeholder="Το θέμα σας..."></textarea>
 									</div>
 								
 								
