--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -80,7 +80,7 @@
 						<br><br><br>
 						
 						<a id="aa" class="btn" href="/staseis_amea" role="button"><font color="white">Στάσεις με προεξοχές</font></a> <br>
-						<a id="aa" class="btn" href="#" role="button"><font color="white">Εισιτήρια/Κάρτες</font></a>	<br>
+						<a id="aa" class="btn" href="/amea_info" role="button"><font color="white">Πληροφορίες ΑμεΑ</font></a>	<br>
 
 						
 					</div>
