--- a/views/partials/footer_en.ejs
+++ b/views/partials/footer_en.ejs
@@ -39,7 +39,7 @@
 						<br><br><br>
 						
 						<a id="aa" class="btn" href="/staseis_amea" role="button"><font color="white">Stations with help</font></a> <br>
-						<a id="aa" class="btn" href="#" role="button"><font color="white">Tickets/Cards</font></a>	<br>
+						<a id="aa" class="btn" href="/amea_info" role="button"><font color="white">Information</font></a>	<br>
 
 						
 					</div>
