--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -252,7 +252,7 @@
 						
 						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/staseis_amea">Στάσεις με προεξοχές</a>
-						  <a class="dropdown-item" href="#">Εισιτήρια/Κάρτες</a>
+						  <a class="dropdown-item" href="/amea_info">Πληροφορίες ΑμεΑ</a>
 						</div>
 					</li>
 					
