--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -146,7 +146,7 @@
 						
 						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/staseis_amea">Stations with help</a>
-						  <a class="dropdown-item" href="#">Tickets/Cards</a>
+						  <a class="dropdown-item" href="/amea_info">Information</a>
 						</div>
 					</li>
 					
