--- a/views/stathmoi_ekdosis.ejs
+++ b/views/stathmoi_ekdosis.ejs
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-	<h5>Σταθμοί στους οποίουσ γίνεται έκδοση προσωποιημενης κάρτας.</h5>
+	<h5>Σταθμοί στους οποίους γίνεται έκδοση προσωποιημενης κάρτας.</h5>
 	<br>
 
 		<table class="table">
