--- a/views/epanadora_kvdikou.ejs
+++ b/views/epanadora_kvdikou.ejs
@@ -22,8 +22,8 @@
 			<div class="form-group">
 				<button class="btn btn-sm btn-success btn-default btn-block"> OK </button>
 			</div>
-
-
+			
+			<a href="javascript:history.back()">Πίσω</a>
 		</form>
 	</div>
 	
