--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,7 +23,7 @@
 						
 						<div class="card" id="contactForm">
 							
-							    <b><font color="black"> <h4>Επικοινωνία με email</h4></font></b>
+							    <h4><font color="black"> <strong> Επικοινωνήστε μαζί μας </strong></font></h4>
 								<br>
 								
 							<form action="/email_me" POST="GET">
@@ -48,12 +48,10 @@
 									</div>
 								
 								
-								  <br>
-								  <button type="submit" class="btn btn-warning btn-sm active" style="float: center;">Αποστολή</button>
+								  <br><p></p>
+								  <button type="submit" class="btn btn-warning btn-sm active" style="float: center;"><strong> Αποστολή </strong></button>
 								</div>
 							</form>
-								
-							  
 							
 						</div>
 					
